--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,16 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+}
+*{
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
+}
+.limitar{
+  max-width: 1024px;
+}
+h2{
+  text-transform: uppercase;
+  font-size: 36px;
+  margin: 0;
 }
