--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,14 +1,13 @@
 body{
-  margin: 0;
-  padding: 0;
+ margin: 0;
+ padding: 0;
+ text-align: center;
 }
 *{
   box-sizing: border-box;
   font-family: 'Poppins',sans-serif;
 }
-.limitar{
-  max-width: 1024px;
-}
+
 h2{
   text-transform: uppercase;
   font-size: 36px;
