--- a/app/src/App.css
+++ b/app/src/App.css
@@ -13,3 +13,22 @@ h2{
   font-size: 36px;
   margin: 0;
 }
+
+
+.banner{
+  background: linear-gradient(47deg, #000113 0%, #04061D 80%, #04061D 100%);
+  background-image: url('imagens/capa.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
+.capa{
+ height: 100%;
+ width: 100%;
+ padding: 20px;
+ display: flexbox;
+ max-width: 500px;
+ color: #fff;
+ text-align: initial;
+ display: block;
+}
