--- a/app/src/componetes/conteudo/Secaoprodutos/secaoprodutos.css
+++ b/app/src/componetes/conteudo/Secaoprodutos/secaoprodutos.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 100px 20px;
 }
-.produtos, .card{
+.produtos .card{
     margin-top: 50px;
     margin-bottom: 50px;
     display: grid;
@@ -14,6 +14,10 @@
     background-color: black;
 
 }
-img{
-    height: 50px;
+.lista{
+    padding: 0 20px;
+    display: flexbox;
+    text-align: left;
+    margin: 5px;
+    
 }
